--- a/q/275101.html
+++ b/q/275101.html
@@ -26,15 +26,16 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>099</td><td>Python 3.8 prerelease</td><td>240822T230304Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275102#275102">squarero</a></td></tr>
+<tr d-ix="0"><td>074</td><td>Python 3.8 prerelease</td><td>240822T230304Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275102#275102">squarero</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 99 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 99 </s> <s> 79 </s> 74 bytes</h1>
+<p><em>-20 bytes by removing the auxiliary</em> <code>t</code> <em>lambda, since it was only used once.</em><br />
+<em>-5 bytes thanks to Lucenaposition.</em></p>
 
-<pre class="lang-python prettyprint-override"><code>lambda*c:sum([t(i,j)for i in range(*c[::2])for j in range(*c[1::2])])
-t=lambda x,y:(s:=x+y)*-~s/2+x
+<pre class="lang-python prettyprint-override"><code>lambda*c:sum(x+(s:=x+y)*-~s/2for x in range(*c[:2])for y in range(*c[2:]))
 </code></pre>
-<p>Takes input like <code>f(inclusiveLeftX, inclusiveTopY, exclusiveRightX, exclusiveBottomY)</code>.<br />
-<a href="https://tio.run/##K6gsycjPM7YoKPqfZhvzPycxNyklUSvZqrg0VyO6RCNTJ0szLb9IIVMhM0@hKDEvPVVDKznaysooFiychSJsCBaP1eQqsYWYo1ChU2mlUWxlW6FdqamlW1esb6Rd8b@gKDOvRCNNw0DHCAjNNTX/AwA" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+<p>Takes input like <code>f(inclusiveLeftX, exclusiveRightX, inclusiveTopY, exclusiveBottomY)</code>.<br />
+<a href="https://tio.run/##K6gsycjPM7YoKPqfZhvzPycxNyklUSvZqrg0V6NCW6PYyrZCu1JTS7euWN8oLb9IoUIhM0@hKDEvPVVDKznayihWEyRaiSJqZBWrqfm/oCgzr0QjTcNAxwgIzYEiAA" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
 
 <table id="st">
