--- a/q/275101.html
+++ b/q/275101.html
@@ -26,10 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>073</td><td>Python 3.8 prerelease</td><td>240822T230304Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275102#275102">squarero</a></td></tr>
-<tr d-ix="1"><td>026</td><td>Charcoal</td><td>240822T232814Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275103#275103">Neil</a></td></tr>
+<tr d-ix="0"><td>076</td><td>JavaScript Node.js</td><td>240823T004341Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275105#275105">l4m2</a></td></tr>
+<tr d-ix="1"><td>073</td><td>Python 3.8 prerelease</td><td>240822T230304Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275102#275102">squarero</a></td></tr>
+<tr d-ix="2"><td>026</td><td>Charcoal</td><td>240822T232814Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275103#275103">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 99 </s> <s> 79 </s> <s> 74 </s> 73 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 76 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>f=(m,n,p,q)=&gt;q?f(m,n)+f(p,q)-f(m,q)-f(p,n):m*n*(m*m*2-~m*n*3-m*3+n*n*2-7)/12
+</code></pre>
+<p><a href="https://tio.run/##ZU/bbsIwDH3vV1TiJclxaO1SKEywH5k2Si9oU5MWuu1xv94laG@TJftcrCP7o/6u5@b@Pn1aP7bdsvRH5cjTRDd9PN2e@8g0ehUFG9ljTEE8OOONcsYZsT8RF9aZAj4gsTudsSxP56SmCzXUpvaUzl8uySknJolU8nSVQ1CCsUGVSLC2xNHiTfAK7LAFMzgHB1BCBMKQfRISQhVxteR0VYELsICrR36o6MT45Ly@d9NQN53KXtVLC03/euaupN7o79DwdTP6eRy69TBeVa9QEy6EBkxowVrr5Rc" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://www.wolframalpha.com/input?i=sum+%28i%2Bj%29*%28i%2Bj%2B1%29%2F2%2Bj%2C+i%3D0..%28m-1%29%2C+j%3D0..%28n-1%29" rel="nofollow noreferrer">WolframAlpha gives this expr</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 99 </s> <s> 79 </s> <s> 74 </s> 73 bytes</h1>
 <p><em>-20 bytes by removing the auxiliary</em> <code>t</code> <em>lambda, since it was only used once.</em><br />
 <em>-5 bytes thanks to Lucenaposition.</em><br />
 <em>-1 byte thanks to Arnauld.</em></p>
@@ -39,7 +47,7 @@
 <p>Takes input like <code>f(inclusiveLeftX, exclusiveRightX, inclusiveTopY, exclusiveBottomY)</code>.<br />
 <a href="https://tio.run/##K6gsycjPM7YoKPqfZhvzPycxNyklUSvZqrg0V6NCV6PYyrZCu1JTq65Y3ygtv0ihQiEzT6EoMS89VUMrOdrKKFYTJFqJImpkFaup@b@gKDOvRCNNw0DHCAjNgSIA" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 26 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 26 bytes</h1>
 <pre><code>≔…ＮＮθＩ⊘ΣＥ…ＮＮΣＥθ⁺⊗λ×⁺ιλ⊕⁺ιλ
 </code></pre>
 <p><a href="https://tio.run/##jUy9CsIwEN59ioxXiCAuDp1EBx0qRX2Bazxq4JK2uaSvH0NBipvfN32/5o3BDMg5H0Vs7@GOvie4@jHFW3IdBai0@pFFT1W9aYP1EU4oES7IM73gkRw0OP538S1PWrWcBM5D6riccMme1pHAYluteFmbQI58LI3VX1HnvFP7wkPezvwB" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Takes inputs in the order exclusive column range, exclusive row range e.g. the test case <code>2, 0, 6, 1</code> becomes <code>0 2 2 7</code>. Explanation:</p>
