--- a/q/275101.html
+++ b/q/275101.html
@@ -26,22 +26,28 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>072</td><td>Desmos</td><td>240823T022855Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275106#275106">Lucenapo</a></td></tr>
-<tr d-ix="1"><td>066</td><td>JavaScript Node.js</td><td>240823T004341Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275105#275105">l4m2</a></td></tr>
+<tr d-ix="0"><td>066</td><td>JavaScript Node.js</td><td>240823T004341Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275105#275105">l4m2</a></td></tr>
+<tr d-ix="1"><td>072</td><td>Desmos</td><td>240823T022855Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275106#275106">Lucenapo</a></td></tr>
 <tr d-ix="2"><td>073</td><td>Python 3.8 prerelease</td><td>240822T230304Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275102#275102">squarero</a></td></tr>
 <tr d-ix="3"><td>026</td><td>Charcoal</td><td>240822T232814Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275103#275103">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.desmos.com/calculator/fyaobsdtjl" rel="nofollow noreferrer">Desmos, 72 bytes</a></h1>
-<pre><code>f(a,b,c,d)=(c-d-1)(a-b-1)((a+b)(c+d)/4+(cc+cd+c+ab+bb+5b+2d+dd+aa+4a)/6)
-</code></pre>
-<p>Order: inclusiveLeftX, inclusiveRightX, inclusiveTopY, inclusiveBottomY</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 66 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 66 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=(m,n,p,q)=&gt;p?f(n,m,q)-f(n,p,q):m*n*(m*m*2-~m*n*3-m*3+n*n*2-7)/12
 </code></pre>
 <p><a href="https://tio.run/##ZY/dTsMwDIXv8xSVdpPkOGvtrlsBbbwIgnX9mUBNWlbgklcvCeIOHcn67GMd2W/NV7O0t9f5w4Wp69d1OGpPgWZ6N8fT/DjoQD6yS5CG994Gq731Vtx34tJ5WyJEEncwOcv6cFYNXailLnOnbPn0qqCCmCS1UmSbAoIKjB1qJdHaEyeLd9ErccAezOACHKGCCIQhdyomRJVpteJsU4NLsIDr3/yo5KR4dd7e@nls2l7nz/qpg6F/NfdX0i/0d2j8tZ3CMo39dpyuetBoCBdCCyZ0YGPM@gM" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p><a href="https://www.wolframalpha.com/input?i=sum+%28i%2Bj%29*%28i%2Bj%2B1%29%2F2%2Bj%2C+i%3D0..%28m-1%29%2C+j%3D0..%28n-1%29" rel="nofollow noreferrer">WolframAlpha gives this expr</a></p>
+<h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 66 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>f=(x,y,X,Y)=&gt;(x-X?f(x+1,y,X):0)+(y-Y?f(x,y+1,X,Y):0)+x-(y+=x)*~y/2
+</code></pre>
+<p><a href="https://tio.run/##ZY/BTsMwEETv@YpIvdjMuvE6TRtAKb/RSgjqOkkFSpuqAWRf@PVgI25opdXum9Fo991@2cnd3q4f6jK23Tz3jfAUaEd72WyFV7unXnhwQvJBS4ig9glRiDC5EvRKBDRe3n2HwsyPh8zSkRy1udrm0@c506SJyaTV6HyhYVCBsUKdmSitiZPEq6iV2GANZrAGx6GCMTAMc5/FhFhlslacL2pwCTbg@jc/VlJSfHZY3rrrYF0nihfx3ELSv16cTyRe6e/Q@KsbL9M4dMthPIle4EiwhJbgpJTzDw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>Loop</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.desmos.com/calculator/fyaobsdtjl" rel="nofollow noreferrer">Desmos, 72 bytes</a></h1>
+<pre><code>f(a,b,c,d)=(c-d-1)(a-b-1)((a+b)(c+d)/4+(cc+cd+c+ab+bb+5b+2d+dd+aa+4a)/6)
+</code></pre>
+<p>Order: inclusiveLeftX, inclusiveRightX, inclusiveTopY, inclusiveBottomY</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 99 </s> <s> 79 </s> <s> 74 </s> 73 bytes</h1>
 <p><em>-20 bytes by removing the auxiliary</em> <code>t</code> <em>lambda, since it was only used once.</em><br />
