--- a/q/275101.html
+++ b/q/275101.html
@@ -26,13 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>015</td><td>05AB1E</td><td>240823T075842Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275108#275108">Kevin Cr</a></td></tr>
-<tr d-ix="1"><td>055</td><td>JavaScript Node.js</td><td>240823T004341Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275105#275105">l4m2</a></td></tr>
-<tr d-ix="2"><td>072</td><td>Desmos</td><td>240823T022855Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275106#275106">Lucenapo</a></td></tr>
+<tr d-ix="0"><td>053</td><td>Desmos</td><td>240823T022855Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275106#275106">Lucenapo</a></td></tr>
+<tr d-ix="1"><td>015</td><td>05AB1E</td><td>240823T075842Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275108#275108">Kevin Cr</a></td></tr>
+<tr d-ix="2"><td>055</td><td>JavaScript Node.js</td><td>240823T004341Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275105#275105">l4m2</a></td></tr>
 <tr d-ix="3"><td>073</td><td>Python 3.8 prerelease</td><td>240822T230304Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275102#275102">squarero</a></td></tr>
 <tr d-ix="4"><td>026</td><td>Charcoal</td><td>240822T232814Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275103#275103">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 15 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://www.desmos.com/calculator/px4wkubxdo" rel="nofollow noreferrer">Desmos, 53 bytes</a></h1>
+<pre><code>f(a,b,c,d)=\sum_{x=a}^b\sum_{y=c}^d(x+(x+y)(x+y+1)/2)
+</code></pre>
+<p>Order: inclusiveLeftX, inclusiveRightX, inclusiveTopY, inclusiveBottomY</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 15 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ŸŠŸâεηO`D±;*-}O
 </code></pre>
 <p>Port of <a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle#comment591648_275102"><em>@l4m2</em>'s comment</a> on <a href="https://codegolf.stackexchange.com/a/275102/52210"><em>@squareroot12621</em>'s Python answer</a>, so make sure to upvote that answer, as well as <a href="https://codegolf.stackexchange.com/a/275105/52210"><em>@l4m2</em>'s Javascript answer</a>!</p>
@@ -42,7 +47,7 @@
 
 <pre class="lang-python prettyprint-override"><code>Ÿ             # Create a [b,d]-ranged list of the first two (implicit) inputs
  Š            # Triple-swap to push the next two (implicit) inputs to the stack
-  Ÿ           # Create a [a,c]-ranged list of those two inputs as well
+  Ÿ           # Create an [a,c]-ranged list of those two inputs as well
    â          # Cartesian product to create all pairs of these two lists
     ε         # Map over each pair [x,y]:
      ηO       #  Cumulative sum it:
@@ -58,16 +63,11 @@
               # (after which the result is output implicitly)
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 55 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 55 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=(x,y,X,Y)=&gt;X?x&lt;X&amp;&amp;f(y,x,Y)+f(x+1,y,X,Y):x-(y+=x)*~y/2
 </code></pre>
 <p><a href="https://tio.run/##ZY/dasMwDIXv/RSBQrF3lMZymi77SfcaGYytrpOUjbQpzTacm716Zo/ejQNC0icOOh/2247u8n7@TE9D085zV0lPE9X0rKpt/eQf6@WykxP5sEAnPfhK730qJ1Re3fxMmZkfdsLSnhw1SbpNxq@j0KSJycTR6GShYVCAsUYpTEAb4oh4HViOW2zADNbg0BQwBoZh7kRwCMrjacHJogTnYAMu//yDIon2Yre6tOfeulZmr/KlgaJ/NTseSL7R9dEQ0A2ncejbVT8cZCexJ1hCEzLCgZVS8y8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://www.desmos.com/calculator/fyaobsdtjl" rel="nofollow noreferrer">Desmos, 72 bytes</a></h1>
-<pre><code>f(a,b,c,d)=(c-d-1)(a-b-1)((a+b)(c+d)/4+(cc+cd+c+ab+bb+5b+2d+dd+aa+4a)/6)
-</code></pre>
-<p>Order: inclusiveLeftX, inclusiveRightX, inclusiveTopY, inclusiveBottomY</p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 99 </s> <s> 79 </s> <s> 74 </s> 73 bytes</h1>
 <p><em>-20 bytes by removing the auxiliary</em> <code>t</code> <em>lambda, since it was only used once.</em><br />
