--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240823T134305Z
+"   /golfscore                                      20240823T150937Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/275100.html">Miracle Miracle Octad Generator Generator       : 0275100</a>
 <a href="q/275101.html">Calculate the sum of numbers in a rectangle     : 0275101</a>
 <a href="q/64198.html">99 Bottles of Beer                              : 0064198</a>
 <a href="q/274532.html">Rabinowitz-Wagon \$\pi\$ formula                : 0274532</a>
