--- a/q/275100.html
+++ b/q/275100.html
@@ -26,17 +26,17 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>257</td><td>JavaScript ES11</td><td>240823T150937Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275112#275112">Arnauld</a></td></tr>
+<tr d-ix="0"><td>247</td><td>JavaScript ES11</td><td>240823T150937Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275112#275112">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES11), 257 bytes</h1>
-<p>Uses the symbols suggested in the challenge.</p>
+<div id="pu0" class="pu"><h1>JavaScript (ES11), 247 bytes</h1>
+<p>Returns a single string, using the symbols suggested in the challenge.</p>
 <p>So far, most time was spent understanding how this damned thing works. I'm sure a more golfy solution exists.</p>
 
-<pre class="lang-javascript prettyprint-override"><code>f=(p=5)=&gt;p--?(g=k=&gt;k?(m=m.map((r,y)=&gt;[...r].map((_,x)=&gt;(o+=&quot;-XO+&quot;[v=m[y/2|x%2*2][x+y&amp;1|x&amp;6]]+[[,&quot; &quot;,,,,`
-`][x]],v)),o=&quot;&quot;))&amp;&amp;o+`
-`+g(k-1):f(p))(7,m=0x54E4B101B4E454B1B401E1E14415BE4140EB1445BB1110EE55A55A00F00Fn.toString(4).substr(p*24,24).match(/.{6}/g)):&quot;&quot;
+<pre class="lang-javascript prettyprint-override"><code>f=(p=5)=&gt;p--?(g=k=&gt;k?(m=[0,1,2,3].map(y=&gt;[e,&quot; &quot;,e,e,e,`
+`].map((c,x)=&gt;(Y=y/2|x%2*2,X=x+y&amp;1|x&amp;6,o+=&quot;-XO+&quot;[v=k&lt;7?m[Y][X]:0x54E4B101B4E454B1B401E1E14415BE4140EB1445BB1110EE55A55A00F00Fn.toString(4)[p*24+Y*6+X]]+c,v)),o=e=&quot;&quot;))&amp;&amp;o+`
+`+g(k-1):f(p))(7):e
 </code></pre>
-<p><a href="https://tio.run/##JYlRa4MwFIXf9ytGYHJvjTGRpINCWhZwr3vYy0DC6lx1ndWIOlHW/XYX6DkH7j3f@c6nfCj6czdGrfs8rWupodMK9b6LogNUutb7@gCNbliTdwA9XfyWMcZ6eyPvdPYEXKhJ9PYSkmzSTbbEyXV@SDaJzeZwCcR1DrbWhllGyT2hXse7o5@spRMidZoQxCBwocdhBXUkcFdChwiPtNF8VjKVRnBh/FX@M5KL1FtKoUwqheSp8UUZI4TgaarUkw/nzz4tG93r2J/bCiSy4edjGHvoNomkie9NPhZfELPf7V9cIe4IWQvXDu5yYhdXQQmI6z8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##JU5Ra4MwGHzfrxjCJDHRJS5pQfYpC7jXPfRFEaHionRWE1oRhf53Fzbu4O44Du6nWZp7e7vYOZzMt973DpAFiSG1YZihHgZIhwyNUDHKaUzf6mhsLNogrTT1nj2q/3B@Ov8XqKWrG6MSttf4sb7EQUwLWMnm88fqH6gh4IXFF/GqBYb3YzZWZV0VdcJWKXKhOOPKqXROCcZzByG4VLngguXKBakU55zluZQfjox9Ok7RbE7z7TL1SODKBrEgZXAgRV2Tli4YUwMaPA9j3zfEfSU9GkKOkw5ZjNERJ3pvzXQ3Vx1dTY86hPH@Cw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 
 <table id="st">
