--- a/q/275100.html
+++ b/q/275100.html
@@ -37,6 +37,14 @@
 `+g(k-1)):f(p))(7):e
 </code></pre>
 <p><a href="https://tio.run/##JY5Ra4MwFIXf9ytGYCUx0SUuaUF2lQWy1z30RRGh4lQ6qwmtiIX@dxc2zgfnXC7ce37qpb4117Obw8l@t9vWAXagCKQuDDPcwwDpkOERSgstIMQEi9lbFY21w3dIy5ahZ8TaP52eTv8L3LDVX8AF3F/jx/oSBzHLYaX3nXisuz2zFFCYf1FULjC8H7KxLKoyrxK@KmmkFlxo78onLbkwXlIKpY0UkhvtB6W1EIIbo9SHh/NPzxTN9jhfz1OPJSldEEtaBHuaVxVt2EII8X99RdrjIRSEJB12hOADSdqtsdPNXtroYnvcYUK2Xw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<h3>Method</h3>
+<p>In a nutshell:</p>
+<ul>
+<li>we store the 5 main patterns in a BigInt with 2 bits per character</li>
+<li>we turn each of them into a matrix of 4 rows and 6 columns</li>
+<li>we apply the following transformation 7 times:</li>
+</ul>
+<p><span class="math-container">$$\begin{pmatrix}A&amp;B&amp;\color{blue}I&amp;\color{blue}J&amp;\color{green}Q&amp;\color{green}R\\C&amp;D&amp;\color{blue}K&amp;\color{blue}L&amp;\color{green}S&amp;\color{green}T\\E&amp;F&amp;\color{blue}M&amp;\color{blue}N&amp;\color{green}U&amp;\color{green}V\\G&amp;H&amp;\color{blue}O&amp;\color{blue}P&amp;\color{green}W&amp;\color{green}X\end{pmatrix}\rightarrow\begin{pmatrix}A&amp;F&amp;\color{blue}I&amp;\color{blue}N&amp;\color{green}Q&amp;\color{green}V\\B&amp;E&amp;\color{blue}J&amp;\color{blue}M&amp;\color{green}R&amp;\color{green}U\\C&amp;H&amp;\color{blue}K&amp;\color{blue}P&amp;\color{green}S&amp;\color{green}X\\D&amp;G&amp;\color{blue}L&amp;\color{blue}O&amp;\color{green}T&amp;\color{green}W\end{pmatrix}$$</span></p>
 </div>
 
 <table id="st">
