--- a/q/78510.html
+++ b/q/78510.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>043</td><td>JavaScript Node.js</td><td>240822T235932Z</td><td><a href="https://codegolf.stackexchange.com/questions/78510/reverse-positive-runs/275104#275104">l4m2</a></td></tr>
-<tr d-ix="1"><td>005</td><td>Japt</td><td>240822T195419Z</td><td><a href="https://codegolf.stackexchange.com/questions/78510/reverse-positive-runs/275094#275094">Shaggy</a></td></tr>
+<tr d-ix="0"><td>005</td><td>Japt</td><td>240822T195419Z</td><td><a href="https://codegolf.stackexchange.com/questions/78510/reverse-positive-runs/275094#275094">Shaggy</a></td></tr>
+<tr d-ix="1"><td>043</td><td>JavaScript Node.js</td><td>240822T235932Z</td><td><a href="https://codegolf.stackexchange.com/questions/78510/reverse-positive-runs/275104#275104">l4m2</a></td></tr>
 <tr d-ix="2"><td>007</td><td>Uiua</td><td>240822T185703Z</td><td><a href="https://codegolf.stackexchange.com/questions/78510/reverse-positive-runs/275093#275093">noodle p</a></td></tr>
 <tr d-ix="3"><td>735</td><td>Nibbles</td><td>240822T142611Z</td><td><a href="https://codegolf.stackexchange.com/questions/78510/reverse-positive-runs/275091#275091">Dominic </a></td></tr>
 <tr d-ix="4"><td>058</td><td>tinylisp 2</td><td>240821T200618Z</td><td><a href="https://codegolf.stackexchange.com/questions/78510/reverse-positive-runs/275082#275082">DLosc</a></td></tr>
@@ -71,17 +71,23 @@
 <tr d-ix="42"><td>029</td><td>Ruby</td><td>160425T180134Z</td><td><a href="https://codegolf.stackexchange.com/questions/78510/reverse-positive-runs/78518#78518">Doorknob</a></td></tr>
 <tr d-ix="43"><td>008</td><td>Pyth</td><td>160425T175057Z</td><td><a href="https://codegolf.stackexchange.com/questions/78510/reverse-positive-runs/78511#78511">FryAmThe</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 43 bytes</h1>
-
-<pre class="lang-javascript prettyprint-override"><code>f=([c,...x],z='')=&gt;+c?f(x,c+z):c?z+c+f(x):z
-</code></pre>
-<p><a href="https://tio.run/##LY/bbsIwDIbv8xS9o1FLceI4B6aWB9kBqtAipo4imCbUl@@cwkXk35/sz8p3@9fe4@18/V1fxmM3z32dv8eyqqrHZznVq5WsmyLu@vxRxmKS27ibilhwK7fT/HYQJls3mREAqQIIpTEl1IqZelGVOACgoQS04kwGhfLKKguLgwO3YEQg7xHAGWW4LjLvKfC2Z@RAsE4jGLLgfFB6OaEANVgyoFXwTiA5ghCAjyLRImGCL0SchDZBe6/ROcuzxj5nrHOYcDCs428haMsPeCOpHBuWewhoNXMk5k@zOFS37jq0scs3Xx/HYvNzKrN93cTxch@HrhrGU97neynl/A8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 5 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 5 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <p>I/O as a digit array.</p>
 <pre><code>óm cw
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=820gY3c&amp;input=WzksNSw4LDgsMywwLDAsNyw0LDEsNCw4LDMsMF0KLVE" rel="nofollow noreferrer">Try it</a></p>
+<pre><code>óm cw     :Implicit input of array
+ó         :Partition between pairs that return falsey (0) when
+ m        :  Reduced by minimum
+   c      :Flat map
+    w     :  Reverse
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 43 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>f=([c,...x],z='')=&gt;+c?f(x,c+z):c?z+c+f(x):z
+</code></pre>
+<p><a href="https://tio.run/##LY/bbsIwDIbv8xS9o1FLceI4B6aWB9kBqtAipo4imCbUl@@cwkXk35/sz8p3@9fe4@18/V1fxmM3z32dv8eyqqrHZznVq5WsmyLu@vxRxmKS27ibilhwK7fT/HYQJls3mREAqQIIpTEl1IqZelGVOACgoQS04kwGhfLKKguLgwO3YEQg7xHAGWW4LjLvKfC2Z@RAsE4jGLLgfFB6OaEANVgyoFXwTiA5ghCAjyLRImGCL0SchDZBe6/ROcuzxj5nrHOYcDCs428haMsPeCOpHBuWewhoNXMk5k@zOFS37jq0scs3Xx/HYvNzKrN93cTxch@HrhrGU97neynl/A8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu2" class="pu"><h1>Uiua, 7 bytes</h1>
 <pre><code>⍜⊜□⍚⇌⊸±
