--- a/q/275100.html
+++ b/q/275100.html
@@ -26,17 +26,17 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>244</td><td>JavaScript ES11</td><td>240823T150937Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275112#275112">Arnauld</a></td></tr>
+<tr d-ix="0"><td>236</td><td>JavaScript ES11</td><td>240823T150937Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275112#275112">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES11), 244 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES11), 236 bytes</h1>
 <p>Returns a single string, using the symbols suggested in the challenge.</p>
-<p>So far, most time was spent understanding how this damned thing works. I'm sure a more golfy solution exists.</p>
+<p>Most time was spent understanding how this damned thing works. I'm sure a more golfy solution exists.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>f=(p=5)=&gt;p--?(g=k=&gt;k?(m=[o=e=&quot;&quot;,1,2,3].map(y=&gt;[e,&quot; &quot;,e,e,e,`
-`].map((c,x)=&gt;(Y=y/2|x%2*2,X=x+y&amp;1|x&amp;6,o+=&quot;-XO+&quot;[v=k&lt;7?m[Y][X]:0x54E4B101B4E454B1B401E1E14415BE4140EB1445BB1110EE55A55A00F00Fn.toString(4)[p*24+Y*6+X]]+c,v))),o+`
+`].map((c,x)=&gt;(o+=&quot;-XO+&quot;[v=k&lt;7?m[y/2|x%2*2][x+y&amp;1|x&amp;6]:0x45F40A4A01F545A40F1A54F04501054AF4FA1554004AA4FF44B44B44B44Bn.toString(4)[p*24+y*6+x]]+c,v))),o+`
 `+g(k-1)):f(p))(7):e
 </code></pre>
-<p><a href="https://tio.run/##JY5Ra4MwFIXf9ytGYCUx0SUuaUF2lQWy1z30RRGh4lQ6qwmtiIX@dxc2zgfnXC7ce37qpb4117Obw8l@t9vWAXagCKQuDDPcwwDpkOERSgstIMQEi9lbFY21w3dIy5ahZ8TaP52eTv8L3LDVX8AF3F/jx/oSBzHLYaX3nXisuz2zFFCYf1FULjC8H7KxLKoyrxK@KmmkFlxo78onLbkwXlIKpY0UkhvtB6W1EIIbo9SHh/NPzxTN9jhfz1OPJSldEEtaBHuaVxVt2EII8X99RdrjIRSEJB12hOADSdqtsdPNXtroYnvcYUK2Xw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##PY5Ba4MwGIbv@xUjsJKY6BL3pQVZlOyQ6w67DIJQcVE6qwmtSIT@d1c2GO9ze@Dh/W6W5tpeTmFOJ//ltq1TOChJVBnStMK9GlQ5VHhU1iunEGKC5eylzsYm4FWV1jH0iJj73fHh@Cdwy@K9gD1VKP18p8guang9VKNdn/NbfMqTvLaRrjtxi7t9XfAI0gDXoLkwEqQGboSWYDhILrgEbcBoISVwDlqDMQBv/0zZ7D/my2nqMRAbkhzomuxprGvasoUQwjy9X6M9HlJBSNHhQAg@kMJtrZ@u/uyys@9xhwnZfgA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <h3>Method</h3>
 <p>In a nutshell:</p>
 <ul>
@@ -44,7 +44,7 @@
 <li>we turn each of them into a matrix of 4 rows and 6 columns, filled with integers in <span class="math-container">\$[0\dots3]\$</span></li>
 <li>we apply the following transformation 7 times:</li>
 </ul>
-<p><span class="math-container">$$\begin{pmatrix}A&amp;B&amp;\color{blue}I&amp;\color{blue}J&amp;\color{green}Q&amp;\color{green}R\\C&amp;D&amp;\color{blue}K&amp;\color{blue}L&amp;\color{green}S&amp;\color{green}T\\E&amp;F&amp;\color{blue}M&amp;\color{blue}N&amp;\color{green}U&amp;\color{green}V\\G&amp;H&amp;\color{blue}O&amp;\color{blue}P&amp;\color{green}W&amp;\color{green}X\end{pmatrix}\rightarrow\begin{pmatrix}A&amp;F&amp;\color{blue}I&amp;\color{blue}N&amp;\color{green}Q&amp;\color{green}V\\B&amp;E&amp;\color{blue}J&amp;\color{blue}M&amp;\color{green}R&amp;\color{green}U\\C&amp;H&amp;\color{blue}K&amp;\color{blue}P&amp;\color{green}S&amp;\color{green}X\\D&amp;G&amp;\color{blue}L&amp;\color{blue}O&amp;\color{green}T&amp;\color{green}W\end{pmatrix}$$</span></p>
+<p><span class="math-container">$$\begin{pmatrix}a&amp;b&amp;\color{blue}i&amp;\color{blue}j&amp;\color{green}q&amp;\color{green}r\\c&amp;d&amp;\color{blue}k&amp;\color{blue}l&amp;\color{green}s&amp;\color{green}t\\e&amp;f&amp;\color{blue}m&amp;\color{blue}n&amp;\color{green}u&amp;\color{green}v\\g&amp;h&amp;\color{blue}o&amp;\color{blue}p&amp;\color{green}w&amp;\color{green}x\end{pmatrix}\rightarrow\begin{pmatrix}a&amp;f&amp;\color{blue}i&amp;\color{blue}n&amp;\color{green}q&amp;\color{green}v\\b&amp;e&amp;\color{blue}j&amp;\color{blue}m&amp;\color{green}r&amp;\color{green}u\\c&amp;h&amp;\color{blue}k&amp;\color{blue}p&amp;\color{green}s&amp;\color{green}x\\d&amp;g&amp;\color{blue}l&amp;\color{blue}o&amp;\color{green}t&amp;\color{green}w\end{pmatrix}$$</span></p>
 <ul>
 <li>we convert each matrix to ASCII and apply the requested formatting</li>
 </ul>
