--- a/q/275100.html
+++ b/q/275100.html
@@ -33,7 +33,9 @@
 <p><em>Whew!</em></p>
 <pre><code>4R8œ?$ṚƭƬ;&quot;`p`ḣ4Jx4ṁƲ;$Q“ṅ⁷ṆŻ§‘BW€¤;&quot;œ?@€€Ƭ⁽¥ọẎŒH€Z€Zż€ʋ€⁶Y€j⁾¶¶F
 </code></pre>
-<p>A full program that takes no input and prints the MOG with <code>0</code> and <code>1</code> in the bricks and <code>1-4</code> in the squares. Prints the combined bricks and squares as they appear in <a href="http://finitegeometry.org/sc/24/gentheog2.pdf" rel="nofollow noreferrer">http://finitegeometry.org/sc/24/gentheog2.pdf</a> in row-major order.</p>
+<p>A full program that takes no input and prints the combined bricks and squares of the MOG as they appear in:</p>
+<p><a href="https://i.sstatic.net/Yo8IXXx7m.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/Yo8IXXx7m.png" alt="MOG" /></a></p>
+<p>in row-major order, with <code>0</code> and <code>1</code> in the bricks and <code>1-4</code> in the squares</p>
 <p><strong><a href="https://tio.run/##y0rNyan8/98kyOLoZHuVhztnHVt7bI21UkJBwsMdi028Kkwe7mw8tslaJfBRw5yHO1sfNW5/uLPt6O5Dyx81zHAKf9S05tASayWgVgcgE4iOrXnUuPfQ0oe7ex/u6js6yQMoFAXCR/cAyVPdIEWN2yKBVNajxn2Hth3a5vb//38A" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
 </div>
 <div id="pu1" class="pu"><h1>JavaScript (ES11), 236 bytes</h1>
