--- a/q/275100.html
+++ b/q/275100.html
@@ -35,7 +35,11 @@
 </code></pre>
 <p>A full program that takes no input and prints the combined bricks and squares of the MOG as they appear in:</p>
 <p><a href="https://i.sstatic.net/Yo8IXXx7m.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/Yo8IXXx7m.png" alt="MOG" /></a></p>
-<p>in row-major order, with <code>0</code> and <code>1</code> in the bricks and <code>1-4</code> in the squares</p>
+<p>in row-major order, using:</p>
+<ul>
+<li><code>0</code> (white) and <code>1</code> (black) in the bricks and</li>
+<li><code>1-4</code> (black, white, circle, dot) in the squares.</li>
+</ul>
 <p><strong><a href="https://tio.run/##y0rNyan8/98kyOLoZHuVhztnHVt7bI21UkJBwsMdi028Kkwe7mw8tslaJfBRw5yHO1sfNW5/uLPt6O5Dyx81zHAKf9S05tASayWgVgcgE4iOrXnUuPfQ0oe7ex/u6js6yQMoFAXCR/cAyVPdIEWN2yKBVNajxn2Hth3a5vb//38A" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
 <h4>How?</h4>
 <p>First, build the four rightmost squares of the top row with each in column-major order split into two:</p>
