--- a/q/275101.html
+++ b/q/275101.html
@@ -41,7 +41,7 @@
 <pre><code>rŒp+RS+ʋ/€S
 </code></pre>
 <p>A dyadic Link that accepts the top-left coordinate on the left (<code>[row, column]</code>) and the bottom-right coordinate on the right (<code>[row, column]</code>) and yields the sum.</p>
-<p><strong><a href="https://tio.run/##y0rNyan8/7/o6KQC7aBg7VPd@o@a1gT///8/2khHwSD2f7SZjoJhLAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
+<p><strong><a href="https://tio.run/##y0rNyan8/7/o6KQC7aBg7VPd@o@a1gT///8/2khHwSD2f7SZjoJhLAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong> Or see the <a href="https://tio.run/##y0rNyan8/7/o6KQC7aBg7VPd@o@a1gT/LzY6vFxfx@HopIc7Z2Q9apijYGun8Khhrmbk///R0QY6BjqGOkaxOlwK0UZAtpmOIZgNFANCYzAbpAYIgexYAA" rel="nofollow noreferrer" title="Jelly – Try It Online">test-suite</a>.</p>
 <h3>How?</h3>
 <p>The value at a given coordinate is the triangle number of the sum of the row and column (the minimum value on its running diagonal) plus its column (the number of steps taken along that diagonal).</p>
 <pre><code>rŒp+RS+ʋ/€S - Link: [Top, Left], [Bottom, Right]
