--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240824T051049Z
+"   /golfscore                                      20240824T052142Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/32024.html">I am passive aggressive and want to insult my bo: 0032024</a>
 <a href="q/275101.html">Calculate the sum of numbers in a rectangle     : 0275101</a>
 <a href="q/50926.html">Calculating Collatz Cousins                     : 0050926</a>
 <a href="q/274951.html">Sum-of-four-squares grid                        : 0274951</a>
