--- a/q/275101.html
+++ b/q/275101.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>062</td><td>Python</td><td>240824T064748Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275122#275122">Albert.L</a></td></tr>
+<tr d-ix="0"><td>061</td><td>Python</td><td>240824T064748Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275122#275122">Albert.L</a></td></tr>
 <tr d-ix="1"><td>023</td><td>Charcoal</td><td>240822T232814Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275103#275103">Neil</a></td></tr>
 <tr d-ix="2"><td>045</td><td>Desmos</td><td>240823T022855Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275106#275106">Lucenapo</a></td></tr>
 <tr d-ix="3"><td>011</td><td>Jelly</td><td>240824T005346Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275120#275120">Jonathan</a></td></tr>
@@ -38,11 +38,11 @@
 <tr d-ix="9"><td>015</td><td>05AB1E</td><td>240823T075842Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275108#275108">Kevin Cr</a></td></tr>
 <tr d-ix="10"><td>055</td><td>JavaScript Node.js</td><td>240823T004341Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275105#275105">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 62 bytes</h1>
-<pre class="lang-python prettyprint-override"><code>f=lambda a,b,c,d:c&lt;d and((c+b)**3-b-c)/6+b*c-f(b,a,c+(b&lt;=a),d)
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 61 bytes</h1>
+<pre class="lang-python prettyprint-override"><code>f=lambda a,b,c,d:c&lt;d and((c+b)**3-b-c)/6+b*c-f(b,a,c+(b&lt;a),d)
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=LY1BTsMwEEX3PsVI3diZCXicJoSo6Ql6A0BgO7UaKU2iEpA4C5tKCO7U22BDNZuR3td7nz_zx3KYxvNXaB-_35aQ15dtaAd7dJ0FS448dY3fdGDHTkqPTmVZkbvcq9sKXebzIB1Z8ijdprWKOnW1vITpBDvoR5jm_Si1agT09EwTtLC7eZ2HfpHqoSmeBMhrR_3Bo53l_t0OJHualBIwn_pxkUGmCsdlhxyX1875MmnSxGQg34LRsNJosETGNdbCRFQRJ8TryAq8wwqZkTVyfEo0Bg2juRfREK9I05JhVSMXyAa5FskfL5Gk_-_-Ag" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Takes top incl, bottom excl, left incl, right excl. Not 100% sure the program logic survives every edge case.</p>
+<p><a href="https://ato.pxeger.com/run?1=LY1BTsMwEEX3PsVI3diZCXicJoSo4QS9ASCw40ZESuOoBCTOwqYSgjv1NtgQzWak9_Xe58_8sbyE6fzVtw_fb0uf15e2b0d7dN6CJUcd-abbebCTl7JDp7KsyF3eqesKXdblvXRkqUPpdlaRV6vkuQ8n2MMwQZgPk9SqETDQEwVoYX_1Oo_DItV9UzwKkGtG_cGjneXh3Y4kBwpKCZhPw7TIXqYIx6VHjsu1c74ETZqYDOR3YDRsNBoskXGLtTARVcQJ8TayAm-wQmZkjRyfEo1Bw2huRTTEK9K0ZNjUyAWyQa5F8sdLJOn_u78" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Takes top incl, bottom excl, left incl, right excl.</p>
 <h2>How?</h2>
 <p>Based on the observation that the first column are just triangle numbers. Its partial sums are tetrahedral numbers and we can compute the sum of the first column as <span class="math-container">\$(\begin{smallmatrix}{\rm top}\\3\end{smallmatrix})-(\begin{smallmatrix}{\rm bottom}\\3\end{smallmatrix})\$</span>. As for other columns, they are just shifted up and have a constant offset added, for example, the second column is the same as the first, except each value is shifted upwards one grid unit and incremented by one.</p>
 </div>
