--- a/q/275101.html
+++ b/q/275101.html
@@ -44,7 +44,8 @@
 <p><a href="https://ato.pxeger.com/run?1=LY1BTsMwEEX3PsVI3diZCXicJoSo4QS9ASCw40ZESuOoBCTOwqYSgjv1NtgQzWak9_Xe58_8sbyE6fzVtw_fb0uf15e2b0d7dN6CJUcd-abbebCTl7JDp7KsyF3eqesKXdblvXRkqUPpdlaRV6vkuQ8n2MMwQZgPk9SqETDQEwVoYX_1Oo_DItV9UzwKkGtG_cGjneXh3Y4kBwpKCZhPw7TIXqYIx6VHjsu1c74ETZqYDOR3YDRsNBoskXGLtTARVcQJ8TayAm-wQmZkjRyfEo1Bw2huRTTEK9K0ZNjUyAWyQa5F8sdLJOn_u78" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Takes top incl, bottom excl, left incl, right excl.</p>
 <h2>How?</h2>
-<p>Based on the observation that the first column are just triangle numbers. Its partial sums are tetrahedral numbers and we can compute the sum of the first column as <span class="math-container">\$(\begin{smallmatrix}{\rm top}\\3\end{smallmatrix})-(\begin{smallmatrix}{\rm bottom}\\3\end{smallmatrix})\$</span>. As for other columns, they are just shifted up and have a constant offset added, for example, the second column is the same as the first, except each value is shifted upwards one grid unit and incremented by one.</p>
+<p>Just seeing that @Jonathan Allan scooped me on this insight.</p>
+<p>Based on the observation that the first column are just triangle numbers. Its partial sums are tetrahedral numbers and we can compute the sum of the first column as <span class="math-container">\$(\begin{smallmatrix}{\rm bottom}\\3\end{smallmatrix})-(\begin{smallmatrix}{\rm top}\\3\end{smallmatrix})\$</span>. As for other columns, they are just shifted up and have a constant offset added, for example, the second column is the same as the first, except each value is shifted upwards one grid unit and incremented by one.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>26</s> 23 bytes</h1>
 <pre><code>≔…ＮＮθＩΣＥ…ＮＮΣＥθ⁺λΣ…·⁰⁺ιλ
