--- a/q/193170.html
+++ b/q/193170.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>044</td><td>Arturo</td><td>240824T081705Z</td><td><a href="https://codegolf.stackexchange.com/questions/193170/1-2-4-8-16-33/275123#275123">chunes</a></td></tr>
+<tr d-ix="0"><td>042</td><td>Arturo</td><td>240824T081705Z</td><td><a href="https://codegolf.stackexchange.com/questions/193170/1-2-4-8-16-33/275123#275123">chunes</a></td></tr>
 <tr d-ix="1"><td>076</td><td>Casio BASIC Casio fx9750GIII</td><td>240823T164928Z</td><td><a href="https://codegolf.stackexchange.com/questions/193170/1-2-4-8-16-33/275114#275114">madeforl</a></td></tr>
 <tr d-ix="2"><td>021</td><td>HOPS</td><td>240510T070834Z</td><td><a href="https://codegolf.stackexchange.com/questions/193170/1-2-4-8-16-33/273046#273046">alephalp</a></td></tr>
 <tr d-ix="3"><td>102</td><td>Google Sheets</td><td>240509T231146Z</td><td><a href="https://codegolf.stackexchange.com/questions/193170/1-2-4-8-16-33/273044#273044">z..</a></td></tr>
@@ -54,10 +54,10 @@
 <tr d-ix="25"><td>044</td><td>Perl 6</td><td>190919T131131Z</td><td><a href="https://codegolf.stackexchange.com/questions/193170/1-2-4-8-16-33/193176#193176">Jo King</a></td></tr>
 <tr d-ix="26"><td>017</td><td>Jelly</td><td>190919T125148Z</td><td><a href="https://codegolf.stackexchange.com/questions/193170/1-2-4-8-16-33/193175#193175">Nick Ken</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 44 bytes</h1>
-<pre class="lang-arturo prettyprint-override"><code>f:$-&gt;n[(n&lt;4)?-&gt;1-&gt;∑map..4n'i-&gt;*f i-1f n-i]
+<div id="pu0" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, <sup><s>44</s></sup> 42 bytes</h1>
+<pre class="lang-arturo prettyprint-override"><code>f:$-&gt;n[?n&lt;4-&gt;1-&gt;∑map..4n'i-&gt;*f i-1f n-i]
 </code></pre>
-<p><a href="http://arturo-lang.io/playground?OQH7Qu" rel="nofollow noreferrer">Try it!</a></p>
+<p><a href="http://arturo-lang.io/playground?NT26mC" rel="nofollow noreferrer">Try it!</a></p>
 <p>Port of G B's <a href="https://codegolf.stackexchange.com/a/193223/97916">Ruby answer</a>.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://en.wikipedia.org/wiki/Casio_BASIC" rel="nofollow noreferrer">Casio BASIC</a> (Casio fx-9750GIII), 76 bytes</h1>
