--- a/q/275100.html
+++ b/q/275100.html
@@ -26,18 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>226</td><td>JavaScript ES11</td><td>240823T150937Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275112#275112">Arnauld</a></td></tr>
+<tr d-ix="0"><td>225</td><td>JavaScript ES11</td><td>240823T150937Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275112#275112">Arnauld</a></td></tr>
 <tr d-ix="1"><td>065</td><td>Jelly</td><td>240823T232413Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275118#275118">Jonathan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES11), 226 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES11), 225 bytes</h1>
 <p>Returns a single string, using the symbols suggested in the challenge.</p>
 <p>Most time was spent understanding how this damned thing works. I'm sure a more golfy solution exists.</p>
 
-<pre class="lang-javascript prettyprint-override"><code>f=(p=5)=&gt;p--?(g=(k,M,m=[])=&gt;k?(h=i=&gt;i&gt;23?`
-`+g(k-1,m):&quot;-XO+&quot;[m[i]=k&lt;7?M[6*(i%2*2|i/12)+(i%6^i/6&amp;~2)]:0x45F40A4A01F545A40F1A54F04501054AF4FA1554004AA4FF44B44B44B44Bn.toString(4)[p*24+i]]+[[`
+<pre class="lang-javascript prettyprint-override"><code>f=(p=0)=&gt;p&lt;120?(g=(k,M,m=[])=&gt;k?(h=i=&gt;i&gt;23?`
+`+g(k-1,m):&quot;-XO+&quot;[m[i]=k&lt;7?M[6*(i%2*2|i/12)+(i%6^i/6&amp;~2)]:0x44B44B44B44B1554004AA4FF4501054AF4FA45A40F1A54F045F40A4A01F5n.toString(4)[p++]]+[[`
 `,,&quot; &quot;][++i%6]]+h(i))(0):f(p))(7):&quot;&quot;
 </code></pre>
-<p><a href="https://tio.run/##PY6xasMwFEX3fkUxtDxZViKpTw6YykYdtIUOWQpCJSGNHdWxZRJTOpT@uqupcId7z3LP5@HrcDtewzSzMX6clqXVMGlFdD0x1kCnoS@2xaCdT6hv4KyDrkMtn5r93Z520DNRDKTK2Nsrzdzggtf986bZujKH8CBz@RPWQhKaRvke1uXjryS@4t@oLHKDhgurUBnkVhiFlqPigis0Fq0RSiHnaAxai/jyn3E1x918DWMHSNyUS6TBe@pcUiqK7D7zjtL0l9gZAiHASdXClMommWbLMY63eDmtLrGDFghZ/gA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##PY49a8MwFEX3/opiSHmK7ORJfXLARDbqoC106FIQKglJ7KiOP0hM6VD6111NhTvce5Z7Pg9fh/vxFsYp64fTeZ5rDaNGpstxKyRW0Gho013aaecjbCu46KDLUMrnav@w5w20mUg7ViTZ@ytPXOeC1@12U@1cvoSwkEv5E9ZCMh5H/hHW@dOvZL7Ab6KX/wilCJGMIWtJoUBFxpI1pAyhFUaRRVKW0JBBYVW/moa36Rb6Boi5kXPvuXPRJ02Tx8Q7zuNZZBcIjAGyooYxlk3UTObj0N@H63l1HRqogbH5Dw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <h3>Method</h3>
 <p>In a nutshell:</p>
 <ul>
