--- a/q/85786.html
+++ b/q/85786.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>007</td><td>Japt x</td><td>240824T092859Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/275124#275124">Shaggy</a></td></tr>
+<tr d-ix="0"><td>006</td><td>Japt x</td><td>240824T092859Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/275124#275124">Shaggy</a></td></tr>
 <tr d-ix="1"><td>037</td><td>Wolfram Language Mathematica</td><td>191113T022113Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/195783#195783">att</a></td></tr>
 <tr d-ix="2"><td>015</td><td>Brachylog</td><td>191111T102203Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/195691#195691">Unrelate</a></td></tr>
 <tr d-ix="3"><td>024</td><td>k4</td><td>160723T022554Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/86367#86367">Aaron Da</a></td></tr>
@@ -47,10 +47,11 @@
 <tr d-ix="18"><td>046</td><td>JavaScript</td><td>160719T124213Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85791#85791">Neil</a></td></tr>
 <tr d-ix="19"><td>015</td><td>J</td><td>160719T125702Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85793#85793">miles</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-x</code></a>, 7 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
-<pre><code>ËfÈ¶E+Y
+<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-x</code></a>, <s>7</s> 6 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<p>0-based</p>
+<pre><code>ËfÈ¶E°
 </code></pre>
-<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;flags=LXg&amp;code=y2bItkUrWQ&amp;input=W1swLDMsMCw0XSxbMCw0LDEsNF0sWzQsMywxLDJdLFstMiw0LC0yLC0xXV0" rel="nofollow noreferrer">Try it</a></p>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;flags=LXg&amp;code=y2bItkWw&amp;input=W1swLDMsMCw0XSxbMCw0LDEsNF0sWzQsMywxLDJdLFstMiw0LC0yLC0xXV0" rel="nofollow noreferrer">Try it</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>42</s> 37 bytes</h1>
 <pre><code>Tr[Pick[#2,Tr@#,#2]&amp;@@@ArrayRules@#]&amp;
