--- a/q/275100.html
+++ b/q/275100.html
@@ -26,18 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>223</td><td>JavaScript ES11</td><td>240823T150937Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275112#275112">Arnauld</a></td></tr>
+<tr d-ix="0"><td>220</td><td>JavaScript ES11</td><td>240823T150937Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275112#275112">Arnauld</a></td></tr>
 <tr d-ix="1"><td>065</td><td>Jelly</td><td>240823T232413Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275118#275118">Jonathan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES11), 223 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES11), 220 bytes</h1>
 <p>Returns a single string, using the symbols suggested in the challenge.</p>
-<p>Most time was spent understanding how this damned thing works. I'm sure a more golfy solution exists.</p>
+<p>Most time was spent understanding how this damned MOG thing works. I'm sure a golfier solution exists.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>f=(p=120)=&gt;p?(g=(k,M,m=[])=&gt;k?(h=i=&gt;i&gt;23?`
-`+g(k-1,m):&quot;-XO+&quot;[m[i]=k&lt;7?M[6*(i%2*2|i/12)+(i%6^i/6&amp;~2)]:0x5F40A1A01F510F15A4F01A51AF1FA1504051FF1AA1001554E11E11E11E11n.toString(4)[--p]]+[[`
+`+g(k-1,m):&quot;-XO+&quot;[m[i]=k&lt;7?M[6*(i%2*2|i/12)+i%6^i/6&amp;1]:0x5F40A1A01F510F15A4F01A51AF1FA1504051FF1AA1001554E11E11E11E11n.toString(4)[--p]]+[[`
 `,,&quot; &quot;][++i%6]]+h(i))(0):f(p))(7):&quot;&quot;
 </code></pre>
-<p><a href="https://tio.run/##PY49a8MwFEX3/ooiaHmK7OQ91XLAVDYaqi10yFIQKglJ7CiOP0hM6VD6111NhTvce5Z7Lvuv/f1wC@OU9sPxNM@1hlGTRK7LsYJGQ5tskk47H0FbwVkHXYZSvlS7h51ooE0p6XjB0o93wVzngtft67rauHwB4Uku5E9YkeQijvwzrPLnX8l9gd/KZmjIIFlFaEmZzCIZRcaSNaQwQ0XWkjGESEplb0T/6ZfTsJ1uoW8g4y5NR@@Fc9EnSdgj806IeBbZGQLngLyoYYxlHTXZfBj6@3A9La9DAzVwPv8B" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##PY6xasMwFEX3fkUxpDxFcvKeKzlgKhsN1RY6dCkIlYQkdhTHlklM6dB/d92lcIfLWc657L/298MtDGPax@NpmmoNg6YMmS6HChoNrdiKTjs/g7aCsw66DGX2XO0edryBNiXRsSJJP9544joXvG5fNtXW5UsIi2yZ/YQ1ZYyHRf4Z1vkT@QK/lZVoyCBZRWhJGWmRjCJjyRpSKFGRtWQMIZJS8pXof/1qjO/jLfQNSObSdPCeOzfHCJE8Jt7xP9XMzhAYA2RFDcN8NnNjMh1if4/X0@oaG6iBsekX" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <h3>Method</h3>
 <p>In a nutshell:</p>
 <ul>
