--- a/q/275100.html
+++ b/q/275100.html
@@ -26,10 +26,28 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>220</td><td>JavaScript ES11</td><td>240823T150937Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275112#275112">Arnauld</a></td></tr>
-<tr d-ix="1"><td>065</td><td>Jelly</td><td>240823T232413Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275118#275118">Jonathan</a></td></tr>
+<tr d-ix="0"><td>236</td><td>APL+WIN</td><td>240824T131230Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275128#275128">Graham</a></td></tr>
+<tr d-ix="1"><td>220</td><td>JavaScript ES11</td><td>240823T150937Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275112#275112">Arnauld</a></td></tr>
+<tr d-ix="2"><td>065</td><td>Jelly</td><td>240823T232413Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275118#275118">Jonathan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES11), 220 bytes</h1>
+<div id="pu0" class="pu"><h1>APL+WIN, 236 bytes</h1>
+<pre><code>i←1 6 2 5 3 8 4 7
+a←b←'X-X-X-X-'⋄c←'O+O+O+O+'
+r←'((4 2⍴a),'' '',(4 2⍴b),(4 2⍴c))⍪'' ''⋄'
+s←r,∊6⍴⊂'a←a[i]⋄b←b[i]⋄c←c[i]⋄',r
+⍎s
+a←'X--X-X-X'⋄c←b←d←'XX--OO++'
+⍎s
+a←'X--XX-X-'⋄b←d⋄c←4⌽⌽d
+⍎s
+a←'X-X--XX-'⋄b←d⋄c←4⌽d
+⍎s
+a←'X-X-X--X'⋄b←d⋄c←⌽d
+⍎s
+</code></pre>
+<p><a href="https://tio.run/##bZBNCsIwEIX3c4rZjcV2Ya0/VxCUbgVxkaYohYLSrtyKqFQrbryEa7deZi5SJ40VFEkCb/K@yTyi1qkXb1S6Wno6VXme6Iovt8mY99cuiBqFojrAx8OiSozEPvrYwy4OMcABKLmL5NDUs4v4tNPmImzbRZCZstUK0OfyoRyXCIncdx05jdKOw@W9NuUNglzaMpePRV9MLrZkZqlZMhfXjIysNMO0leRmwOUlr1NJIhupSWR64toQJwzbkuwbbuJb0DYFfH7Kjr9QC/9DfzlD/nIfrJJfhWoB8AI" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES11), 220 bytes</h1>
 <p>Returns a single string, using the symbols suggested in the challenge.</p>
 <p>Most time was spent understanding how this damned MOG thing works. I'm sure a golfier solution exists.</p>
 
@@ -50,7 +68,7 @@
 <li>we convert each matrix to ASCII and apply the requested formatting</li>
 </ul>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 65 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 65 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <p><em>Whew!</em></p>
 <pre><code>4R8œ?$ṚƭƬ;&quot;`p`ḣ4Jx4ṁƲ;$Q“ṅ⁷ṆŻ§‘BW€¤;&quot;œ?@€€Ƭ⁽¥ọẎŒH€Z€Zż€ʋ€⁶Y€j⁾¶¶F
 </code></pre>
