--- a/q/85786.html
+++ b/q/85786.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>043</td><td>Ruby rmatrix</td><td>240824T162421Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/275130#275130">Jordan</a></td></tr>
+<tr d-ix="0"><td>038</td><td>Ruby rmatrix</td><td>240824T162421Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/275130#275130">Jordan</a></td></tr>
 <tr d-ix="1"><td>011</td><td>Uiua</td><td>240824T154539Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/275129#275129">nyxbird</a></td></tr>
 <tr d-ix="2"><td>006</td><td>Japt x</td><td>240824T092859Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/275124#275124">Shaggy</a></td></tr>
 <tr d-ix="3"><td>037</td><td>Wolfram Language Mathematica</td><td>191113T022113Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/195783#195783">att</a></td></tr>
@@ -49,12 +49,12 @@
 <tr d-ix="20"><td>046</td><td>JavaScript</td><td>160719T124213Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85791#85791">Neil</a></td></tr>
 <tr d-ix="21"><td>015</td><td>J</td><td>160719T125702Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85793#85793">miles</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a> <code>-rmatrix</code>, 43 bytes</h1>
-<p>Takes a Matrix object as input. (Alas,
+<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a> <code>-rmatrix</code>, 38 bytes</h1>
+<p>Takes a Matrix object as input (<code>m</code>). (Alas,
 The space after <code>_1</code> is required.)</p>
-<pre class="lang-ruby prettyprint-override"><code>-&gt;m{m.each_with_index.sum{_2+_3==_1 ?_1:0}}
+<pre class="lang-ruby prettyprint-override"><code>m.each_with_index.sum{_2+_3==_1 ?_1:0}
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m72kqDSpck20km5RbmJJUWaFUuwiN9ulpSVpuhY3tXXtcqtz9VITkzPiyzNLMuIz81JSK_SKS3Or4420441tbeMNFezjDa0MamuhWtwKFNyifcEmRUcb6CgY6ygASZNYHS4Qz0RHwRDKMwHLAXlGIJ6uEVgSROkaxsbGQkxbsABCAwA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=m72kqDSpck20km5RbmJJUWaFUuxNz1wFWwVfMC862kBHwVhHAUiaxOpwgXgmOgqGUJ4JWA7IMwLxdI3AkiBK1zA2lqtAIWZpaUmarsVNtVy91MTkjPjyzJKM-My8lNQKveLS3Op4I-14Y1vbeEMF-3hDK4NaiOoFUApKAwA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, 11 bytes</h1>
 <pre><code>/+⊡⊚=≡≡/+°⊡.
